--- a/change_interval_aged_report/static/description/index.html
+++ b/change_interval_aged_report/static/description/index.html
@@ -1,6 +1,6 @@
 <section class="oe_container">
 	<div>
-		<h1 class="text-center">Change Date Interval <br/>Aged Receivable & Payable Report</h1>
+		<h1 class="text-center">Customize Change Date Interval <br/>Aged Receivable & Payable Report</h1>
 		<br/>
 		<p class="mb16 text-center text-black-dark" style="font-family: Roboto;font-weight: initial;color: #091E42;text-align:center;font-size: 16px;">You can change date interval aged receivable & payable report directly on menu default ged receivable & payable report.
 		</p>
