--- a/change_interval_aged_report/static/description/index.html
+++ b/change_interval_aged_report/static/description/index.html
@@ -15,6 +15,11 @@
 		<br/>
 		<img class="img img-responsive mt16" src="ex3.png" style="display: block;margin: 0 auto;" />
 		<br/>
+		<p class="text-center"></p>
+		Report Aged On Format Excel (XLSX) :
+		<img class="img img-responsive mt16" src="SAMPLEREPORT.png" style="display: block;margin: 0 auto;" />
+		<br/>
+		
 
 	</div>
 </section>
