Report Aged On Format Excel (XLSX) s:

--- a/change_interval_aged_report/static/description/index.html
+++ b/change_interval_aged_report/static/description/index.html
@@ -15,8 +15,8 @@
 		<br/>
 		<img class="img img-responsive mt16" src="ex3.png" style="display: block;margin: 0 auto;" />
 		<br/>
-		<p class="text-center"></p>
-		Report Aged On Format Excel (XLSX) :
+		<p class="mb16 text-center text-black-dark" style="font-family: Roboto;font-weight: initial;color: #091E42;text-align:center;font-size: 16px;">Report Aged On Format Excel (XLSX) :</p>
+		
 		<img class="img img-responsive mt16" src="SAMPLEREPORT.png" style="display: block;margin: 0 auto;" />
 		<br/>
 		
